--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,6 +4,7 @@ html.root {
   margin: 0;
   outline: none;
   scroll-behavior: smooth;
+  font-family: var(--font-montserrat);
 }
 
 $blue-color: #30cfeb;
